   * Made $this_unit in filter_recall work
   * Added IS_EXPENDABLE_LEADER, which gives a unit the expendable leader icon
   * Added $this_unit support to [harm_unit] and [find_path]
   * Settings by [color_adjust] no longer expire at turn start or over save/load cycles
   * Implemented bullet= for [objectives], [objective], [gold_carryover], and [note]
 * Miscellaneous and bug fixes:
   * Fixed compilation on all Debian architectures (Debian bug #636193)
   * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
   * Made it possible to switch themes from Preferences in the main menu
     (bug #10969)
   * Fixed preload event not being fired (bug #18695)
   * Make the create unit dialog give the created unit a valid gender for
     that unit type. (bug #18704)
   * Add --language/-L commandline option to set the language for that session
   * The credits screen no longer mangles image path function in background
     image lists
   * Evaluate key length even if intervening WML children don't exist (bug #18701)
   * Fix gold carryover if loading a save created in linger mode (bug #16111)
   * Fixed: Compilation with boost 1.47 (bug #18399's patch).
   * Fixed: Compilation with the clang 2.9 compiler (bug #18399's patch).
   * Fixed: Avoid copying of singular iterators in the whiteboard code.
   * Fixed a problem where version comparisons (including, but not limited to
     #ifver/#ifnver directives) could cease to work until Wesnoth was restarted
     (bug #18766)
   * Fixed remaining time of day areas that should affect map borders in mainline
     campaigns and MP scenarios (bug #16508)

Version 1.9.9:
 * AI:
   * Fixed bug #16117: added a way to supress E_NOT_REACHED_DESTINATION to lua
   * Fixed bug #16247: modify SoF 8 to let the dragon attack aggressively
     api via an optional boolean parameter - ai.move_full(from,to_x,to_y,true)
   * Fixed bug #18057: AI leaders should now attack when they should