@@ -82,6 +82,7 @@ Version 1.9.9+svn:
    * Added $this_unit support to [harm_unit] and [find_path]
    * Settings by [color_adjust] no longer expire at turn start or over save/load cycles
    * Implemented bullet= for [objectives], [objective], [gold_carryover], and [note]
+   * Implemented r=, g=, and b= for [objective], [gold_carryover], and [note]
  * Miscellaneous and bug fixes:
    * Fixed compilation on all Debian architectures (Debian bug #636193)
    * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
